fix(testimonials): fix case study description alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -418,7 +418,7 @@ video {
     }
 
     .logo-content, .button-content {
-        margin: 1rem 0 .7rem 0;
+        margin: 1rem 0;
     }
 
     .contact-us {
@@ -527,7 +527,7 @@ video {
         order: 4;
         width: 45%;
         margin: 0 0 0 1.5rem;
-        text-align: right;
+        text-align: left;
     }
 
     .alzheimer .case-study-description {
